Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -428,22 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "str"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(top_canadian_cities)"
+    "type(top_canadia_city)"
    ]
   },
   {
