--- a/index.ipynb
+++ b/index.ipynb
@@ -428,22 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "list"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(top_canadia_city)"
+    "type(top_travel_cities)"
    ]
   },
   {
