--- a/index.ipynb
+++ b/index.ipynb
@@ -462,22 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley']"
+       "[]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[0:5]"
+    "top_travel_cities[-1:-4]"
    ]
   },
   {
