Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -663,11 +663,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities.append('Kyle')"
+    "top_travel_cities.append('San Antonio')"
    ]
   },
   {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -697,11 +697,10 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
-       " 'San Antonio',\n",
-       " 'Kyle']"
+       " 'San Antonio']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
