--- a/index.ipynb
+++ b/index.ipynb
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
        " 'Greenville',\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
-       " 4,\n",
+       " 'Wenis',\n",
        " 'Marakesh',\n",
        " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
@@ -835,10 +835,11 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
-       " 'San Antonio']"
+       " 'San Antonio',\n",
+       " 'Kyle']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
