Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -808,16 +808,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities[4] = \"Wenis\""
+    "top_travel_cities[4] = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
        " 'Greenville',\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
-       " 'Wenis',\n",
+       " 4,\n",
        " 'Marakesh',\n",
        " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
@@ -839,7 +839,7 @@
        " 'Kyle']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
