--- a/index.ipynb
+++ b/index.ipynb
@@ -857,10 +857,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 'Walla Walla Valley'"
@@ -875,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -893,10 +891,11 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
-       " 'San Antonio']"
+       " 'San Antonio',\n",
+       " 'Kyle']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
