--- a/index.ipynb
+++ b/index.ipynb
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -954,6 +954,7 @@
        " 'Buenos Aires',\n",
        " 'Greenville',\n",
        " 'Iguazu Falls',\n",
+       " 'Kyle',\n",
        " 'Los Cabos',\n",
        " 'Marakesh',\n",
        " 'Pyeongchang',\n",
@@ -964,7 +965,7 @@
        " 'Walla Walla Valley'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
