--- a/index.ipynb
+++ b/index.ipynb
@@ -761,22 +761,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'San Antonio'"
+       "'Solta'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities.pop()"
+    "top_travel_cities.pop(0)"
    ]
   },
   {
@@ -817,17 +817,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
+       "['Greenville',\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
-       " 4,\n",
+       " 'Walla Walla Valley',\n",
        " 'Marakesh',\n",
        " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
@@ -836,10 +835,11 @@
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
        " 'San Antonio',\n",
-       " 'Kyle']"
+       " 'Kyle',\n",
+       " 'Solta']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
